<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scheduling System</string>
    <string name="professor_login">Professor Login</string>

    <string name="room_scheduler">Room Scheduler</string>
    <string name="login">Log In</string>
    <string name="welcome">Welcome Back</string>

    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_text">Sign in to manage your schedules</string>
    <string name="contact_support">Need help? Contact IT Support</string>

    <string-array name="dashboard_tabs">
        <item>My Rooms</item>
        <item>All Rooms</item>
    </string-array>

    <string name="admin_portal">Admin Portal</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>

    <string name="professors_waiting">3 Professors waiting</string>
    <string name="review">Review</string>
    <string name="notifications_icon">Notifications icon</string>

    <string name="manage_rooms">Manage Rooms</string>
    <string name="lab_101">Lab 101</string>
    <string name="lecture_hall_a">Lecture Hall A</string>
    <string name="status_available">Status: Available</string>
    <string name="status_occupied">Status: Occupied (Prof. Rham)</string>

    <string name="edit_lab_101">Edit Lab 101</string>
    <string name="delete_lab_101">Delete Lab 101</string>
    <string name="edit_lecture_hall_a">Edit Lecture Hall A</string>
    <string name="delete_lecture_hall_a">Delete Lecture Hall A</string>

    <string name="edit_room">Edit room</string>
    <string name="delete_room">Delete room</string>
    <string name="add_new_room">Add New Room</string>
    <string name="admin_dashboard">Admin Dashboard</string>

    <string name="back">Back</string>
    <string name="hint_room_name">Room Name (e.g. Lab 101)</string>
    <string name="hint_capacity">Capacity</string>
    <string name="switch_room_active">Room is currently active</string>
    <string name="save_room">Save Room</string>
    <string name="user_profile_image" />



    <string name="todo">TODO</string>
    <string name="status_pending_review">Status: Pending Review</string>
    <string name="request_details">Request Details</string>
    <string name="submitted_2_hours_ago">Submitted 2 hours ago</string>
    <string name="room_information">Room Information</string>
    <string name="building_a_2nd_floor">Building A, 2nd Floor</string>
    <string name="date">DATE</string>
    <string name="oct_24_2023">Oct 24, 2023</string>
    <string name="_10_00_11_30_am">10:00 – 11:30 AM</string>
    <string name="request_information">Request Information</string>
    <string name="prof_sherard_chris">Prof. Sherard Chris</string>
    <string name="purpose_class">PURPOSE / CLASS</string>
    <string name="information_technology_dept">Information Technology Dept.</string>
    <string name="advanced_java_programming_cs_302_midterm_examination_makeup_session">Advanced Java Programming (CS-302) Midterm Examination Makeup Session.</string>
    <string name="approve">Approve</string>
    <string name="computer_lab_101">Computer Lab 101</string>
    <string name="reject">Reject</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="lecture_room_2">Lecture Room 2</string>
    <string name="available_until_2_00_pm">Available until 2:00 PM</string>
    <string name="status_occupied_class_in_session">Status: Occupied (Class in Session)</string>
    <string name="request">Request</string>
    <string name="details">Details</string>
    <string name="reserved_by_prof_jaydee">Reserved by Prof. Jaydee</string>
    <string name="conference_room_b">Conference Room B</string>
    <string name="status_reserved_another_prof">Status: Reserved (Another Prof)</string>
    <string name="busy">Busy</string>
    <string name="occupied_mad_121">Occupied: MAD 121</string>
    <string name="laboratory_1">Laboratory 1</string>
    <string name="success">Success!</string>
    <string name="awesome">Awesome</string>
    <string name="your_room_request_has_been_sent_for_approval">Your room request has been sent for approval.</string>
    <string name="room_available">Room Available</string>
    <string name="lecture_room_1">Lecture Room 1</string>
    <string name="vacant_until_2_00_pm">Vacant until 2:00 PM</string>
    <string name="book_room">Book Room</string>
    <string name="requesting_computer_lab_101">Requesting: Computer Lab 101</string>
    <string name="select_date">Select Date</string>
    <string name="mon_oct_24_2023">Mon, Oct 24, 2023</string>
    <string name="start_time">Start Time</string>
    <string name="_09_00_am">09:00 AM</string>
    <string name="end_time">End Time</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="purpose_class_name">Purpose / Class Name</string>
    <string name="send_request">Send Request</string>
    <string name="you_re_all_caught_up_there_are_no_requests_waiting_for_approval_right_now">You\'re all caught up! There are no requests waiting for approval right now.</string>
    <string name="no_pending_requests">No Pending Requests</string>
    <string name="refresh_list">Refresh List</string>
    <string name="professor_sherard_chris">Professor Sherard Chris</string>
    <string name="sherardchris_wmsu_edu_ph">sherardchris@wmsu.edu.ph</string>
    <string name="my_requests">My Requests</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="default_prof_name">Prof. Name</string>
    <string name="pending_approvals">Pending Approvals</string>
    <string name="default_request_count">3 requests</string>
    <string name="all_rooms">All Rooms &amp; Labs</string>

    <string name="person_id_format">ID: %d</string>
    <string name="add_user" />
    <string name="add_room" />
    <string name="schedules">Schedules</string>
    <string name="rooms">Rooms</string>
    <string name="users">Users</string>
    <string name="add_schedule" />
    <string name="adjust_image">Adjust Image</string>
    <string name="crop">Crop</string>
    <string name="save_changes">Save Changes</string>
    <string name="rotate">Rotate</string>
    <string name="edit_room_details">Edit Room Details</string>
    <string name="_40">40</string>
    <string name="mark_as_available">Mark as Available</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_lab_101_this_action_cannot_be_undone">Are you sure you want to delete \'Lab 101\'? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="teacher_status_available">Available • Capacity: %1$d</string>
    <string name="teacher_dashboard">Teacher Dashboard</string>

    <string name="my_schedule">My Schedule</string>
    <string name="room_schedules">Room Schedules</string>
    <string name="oct_24">Oct 24</string>
    <string name="makeup_class_cs_302">Makeup Class: CS-302</string>
    <string name="_10_00_am_11_30_am">10:00 AM - 11:30 AM</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="viewing_schedule">Viewing Schedule</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="status">Status</string>
    <string name="capacity_40_students">Capacity: 40 Students</string>
    <string name="upcoming_classes">Upcoming Classes</string>
    <string name="no_classes_scheduled_for_this_room">No classes scheduled for this room.</string>
    <string name="track_your_booking_status">Track your booking status</string>
    <string name="all">All</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="teacher_portal">TEACHER PORTAL</string>
    <string name="view_all">View All</string>

    <!-- res/values/strings.xml -->
    <string name="room_capacity_format">%1$s • %2$d seats</string>
    <string name="room_capacity_format_one">%1$s • %2$d seat</string>

    <!-- Room Schedule || Admin: Dashboard-->
    <string name="admin_manage_schedule">Manage Schedule</string>
    <string name="room_name">Room</string>
    <string name="time">Time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <string name="admin_manage_users">Manage Users</string>
    <string name="admin_manage_rooms">Manage Rooms</string>
    <string name="edit_user">Edit user</string>
    <string name="delete_user">Delete user</string>

    <string name="add_new_user">Add New User</string>

    <string name="schedule_for_today">Schedule For Today</string>
    <string name="schedule_for_week">Schedule for The Week</string>
    <string name="day">day</string>
    <string name="week">week</string>

    <string name="edit_schedule">Edit Schedule</string>
    <string name="edit_day">Day</string>
    <string name="edit_schedule_day">Monday</string>
    <string name="edit_subject_code">Subject Code</string>
    <string name="edit_subject_name">Subject Name</string>
    <string name="edit_section">Section</string>
    <string name="edit_teacher">Teacher</string>
    <string name="edit_status">Status</string>
    <string name="edit_time_start">Time Start</string>
    <string name="edit_time_end">Time End</string>

    <string name="edit_subject_code_name">CC 104</string>
    <string name="edit_subject_name_name">CC 104</string>
    <string name="edit_section_name">BSCS</string>
    <string name="edit_teacher_name">Teachers Name</string>
    <string name="edit_status_name">Occupied</string>
    <string name="edit_time_start_name">07:00 AM</string>
    <string name="edit_time_end_name">10:00 AM</string>

    <string name="day_view">Day</string>
    <string name="week_view">Week</string>
</resources>