<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.RoomBooking"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="24dp"
    app:cardElevation="8dp"
    tools:ignore="TextSizeCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <View
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_circle_green_light" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="-60dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_check_circle"
            app:tint="#4CAF50"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/success"
            android:textColor="#2E7D32"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSuccessMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/your_room_request_has_been_sent_for_approval"
            android:textColor="#757575"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOkay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/awesome"
            android:textAllCaps="false"
            android:textColor="#263238"
            app:backgroundTint="#4CAF50"
            app:cornerRadius="25dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>