<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/primary_green"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgNavProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_placeholder"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNavName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_prof_name"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNavEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#E8F5E9"
        android:textSize="14sp" />

</LinearLayout>